0.1.1 playable physics